# cwi-pcl-codec

./: .gitignore  .gitlab-ci.yml  AUTHORS.txt  CHANGES.md  CMakeLists.txt  INSTALL.md  LICENSE.txt  PCLConfig-Ubuntu16.04.patch  README.html  README.md  cwi-pcl-codec.supp  parameter_config.txt
apps/cwi_encode/: CMakeLists.txt  CMakeLists2 - Copy.txt  CMakeLists2.txt  ReadMe.txt
apps/cwi_encode/include/pcl/apps/cwi_encode/: cwi_encode.h  evaluate_comp.h
apps/cwi_encode/include/pcl/apps/cwi_encode/impl/: evaluate_comp_impl.hpp  qual_metrics_impl.hpp
apps/cwi_encode/src/: cwi_encode.cpp  stdafx.cpp
apps/cwipc_decode/: CMakeLists.txt  cwipc_decode.cpp
apps/cwipc_downsample/: CMakeLists.txt  cwipc_downsample.cpp
apps/cwipc_encode/: CMakeLists.txt  cwipc_encode.cpp
apps/cwipc_tilefilter/: CMakeLists.txt  cwipc_tilefilter.cpp
apps/evaluate_compression/: CMakeLists.txt  parameter_config.txt  readme.md
apps/evaluate_compression/include/pcl/apps/evaluate_compression/: evaluate_compression.h  quality_metric.h  quality_metrics.h
apps/evaluate_compression/include/pcl/apps/evaluate_compression/impl/: evaluate_compression_impl.hpp  quality_metric_impl.hpp  quality_metrics_impl.hpp
apps/evaluate_compression/src/: evaluate_compression.cpp  quality_metric.cpp  quality_metrics.cpp
apps/quality_metric/: CMakeLists.txt
apps/quality_metric/include/pcl/apps/quality_metric/: quality_metric.h
apps/quality_metric/include/pcl/apps/quality_metric/impl/: quality_metric_impl.hpp
apps/quality_metric/src/: quality_metric.cpp
apps/quality_metricCLI/: CMakeLists.txt
apps/quality_metricCLI/include/pcl/apps/quality_metricCLI/: quality_metricCLI.h
apps/quality_metricCLI/include/pcl/apps/quality_metricCLI/impl/: quality_metricCLI_impl.hpp
apps/quality_metricCLI/src/: quality_metricCLI.cpp
cloud_codec_v2/: CMakeLists.txt
cloud_codec_v2/include/pcl/cloud_codec_v2/: color_coding_jpeg.h  jpeg_io.h  point_cloud_codec_v2.h  point_cloud_codec_v2_omp.h  point_coding_v2.h  quaternion_coding.h  rigid_transform_coding.h  snake_grid_mapping.h
cloud_codec_v2/include/pcl/cloud_codec_v2/impl/: point_cloud_codec_v2_impl.hpp  point_cloud_codec_v2_omp_impl.hpp  quaternion_coding_impl.hpp  rigid_transform_coding_impl.hpp
cloud_codec_v2/src/: jpeg_io.cpp  point_cloud_codec_v2.cpp
cmake/: cmake_uninstall.cmake.in  cpack_options.cmake.in  custom_output.sh  pkgconfig-headeronly.cmake.in  pkgconfig.cmake.in  uninstall_target.cmake.in
cmake/Modules/: FindDSSDK.cmake  FindEigen.cmake  FindEnsenso.cmake  FindFZAPI.cmake  FindGLEW.cmake  FindGtest.cmake  FindJPEG_Turbo.cmake  FindOpenNI.cmake  FindOpenNI2.cmake  FindPXCAPI.cmake  FindPcap.cmake  FindQVTK.cmake  FindQhull.cmake  FindRSSDK.cmake  FindTurboJPEG.cmake  FinddavidSDK.cmake
cmake/images/: README
cwi_encode/: cwi_encode.cpp  cwi_encode.h  cwi_encode.vcxproj  cwi_encode.vcxproj.filters
cwi_encode/Debug/: vc140.idb
cwi_encode/Debug/cwi_encode.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  cwi_encode.lastbuildstate  cwi_encode.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cwi_encode/include/: evaluate_comp.h  qual_metrics.h
cwi_encode/include/impl/: evaluate_comp_impl.hpp  qual_metrics_impl.hpp
include/cwipc_codec/: api.h  evaluate_comp.h
jpeg_io/: CMakeLists.txt
jpeg_io/include/pcl/io/: jpeg_io.h
jpeg_io/include/pcl/io/impl/: jpeg_io.hpp
jpeg_io/src/: jpeg_io.cpp
python/: CMakeLists.txt  setup.py  test_cwipc_codec.py
python/_cwipc_codec/: __init__.py
quality_metric/: CMakeLists.txt
quality_metric/include/pcl/quality_metric/: quality_metric.h
quality_metric/include/pcl/quality_metric/impl/: quality_metric_impl.hpp
quality_metric/src/: quality_metric.cpp
src/: CMakeLists.txt  cwi_encode.cpp  cwipc_codec.cpp  cwipc_filters.cpp  cwipc_pcl_additions.cpp  evaluate_comp_impl.hpp  qual_metrics.h  qual_metrics_impl.hpp
tests/: CMakeLists.txt
tests/fixtures/compressed/: pcl_frame1.cwicpc
